--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ title: WiMCS
 subtitle: Women in Mathematics and Computer Science
 ---
 
-![Group Photo](assets/img/gather.png)
+<img src="assets/img/gather.png" alt="Name" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
+
