--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: WiMCS
 subtitle: Women in Mathematics and Computer Science
 ---
 
-<img src="assets/img/gather.png" alt="Name" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover;">
+<img src="assets/img/gather.png" alt="Name" style="width: 300px; height: 200px; object-fit: cover;">
+
 
