--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ title: WiMCS
 subtitle: Women in Mathematics and Computer Science
 ---
 
-<img src="assets/img/gather.png" alt="Name" style="width: 300px; height: 200px; object-fit: cover;">
+<div style="text-align: center;">
+    <img src="assets/img/gather.png" alt="Name" style="width: 500px; height: 400px; object-fit: cover;">
+</div>
+
 
 
