--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ title: WiMCS
 subtitle: Women in Mathematics and Computer Science
 ---
 
-<div style="text-align: center;">
+<div style="margin-top: -30px;">
     <img src="assets/img/gather.png" alt="Name" style="width: 700px; height: 600px; object-fit: contain;">
 </div>
+
+
 
 
 
