--- a/index.html
+++ b/index.html
@@ -10,32 +10,7 @@ subtitle: Women in Mathematics and Computer Science
 
 
 
-<img src="/assets/img/s.png" alt="Member 2" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-
----
-
-<img src="/assets/img/m.png" alt="Member 2" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-  
----
-
-<img src="/assets/img/me.png" alt="Member 3" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-
----
-
-<img src="/assets/img/c.png" alt="Member 3" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-
----
-
-<img src="/assets/img/so.png" alt="Member 3" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-
----
-
-<img src="/assets/img/so.png" alt="Member 3" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
-
----
-
-<img src="/assets/img/swan.png" alt="Member 3" style="width:200px;height:auto;float:left;margin-right:15px;border-radius:50%;">
- 
+<img src="assets/img/m.png" alt="Name" style="width: 200px; height: auto; object-fit: contain;">
 
 
 
