--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@ subtitle: Women in Mathematics and Computer Science
 
 <img src="assets/img/m.png" alt="Name" style="width: 200px; height: auto; object-fit: contain;">
 
+<img src="assets/img/mo.png" alt="Name" style="width: 200px; height: auto; object-fit: contain;">
+
+<img src="assets/img/s.png" alt="Name" style="width: 200px; height: auto; object-fit: contain;">
+
 
 
